tests/ui/generator/issue-91477.stderr
error[E0627]: yield expression outside of generator literal
  --> $DIR/issue-91477.rs:4:5
   |
LL |     yield 1;
   |     ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0627`.
